--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "04.callback.js",
   "dependencies": {
+    "@types/node-fetch": "^2.5.10",
     "fs": "0.0.1-security",
+    "node-fetch": "^2.6.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
